# omega-memory

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  llms-install.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-installer.yml  build-macos-installer.yml  test.yml
assets/: generate_demo_gif.py  generate_social_preview.py
docs/: architecture.md  benchmark-report.md  changelog.md  cli.md  demo.tape  index.md  memory-benchmarks-landscape-2026.md  openclaw-plugin-architecture.md  rrf-scoring-analysis.md  troubleshooting.md
docs/development/: adr-001-recall-constraint-separation.md  bugfix-pre-promotion.md  community-tools-roadmap.md  iteration-1-future-session-handoff.md  iteration-1-live-promotion-record.md  iteration-1-retrieval-research.md  iteration-2-future-session-handoff.md  live-safe-development.md  omega-schema-consolidated.md  (+2 more)
hooks/: assistant_capture.py  auto_claim_file.py  coord_heartbeat.py  coord_session_start.py  coord_session_stop.py  fast_hook.py  pre_alignment_gate.py  pre_commit_guard.py  pre_deploy_guard.py  pre_edit_surface.py  pre_file_guard.py  pre_protocol_gate.py  pre_push_guard.py  pre_review.py  pre_task_guard.py  session_stop.py  surface_memories.py  trace_capture.py  track_file_read.py
installer/: README.md  build-macos-pkg.sh  configure_claude.py  omega-setup.iss  repair-config.bat
integrations/: README.md  crewai_memory.py
openclaw-skill/: SKILL.md
scripts/: clean_store.py  convert_bge_reranker.py  download_model.py  import-session-usage.py  install-omega-pro.ps1  latency_profile.py  omega_http_bridge.py  precision_audit.py  purge_cloud_orphans.py  release.py  retrieval_promotion_smoke.py  rrf_weight_tuner.py  store_system_insights.py  sync-db.sh  sync-to-public.py
src/omega/: cli.py  (+31 more)
tests/: conftest.py  test_adaptive_recall.py  test_agent_instruction_surfaces.py  test_agent_type.py  test_aggressive_learning.py  test_auto_decision_register.py  test_backbone_resilience.py  test_batch_store_handler.py  test_behavioral.py  test_bitemporal.py  test_bootstrap.py  test_bridge_helpers.py  test_bridge_integration.py  test_browse_structured_output.py  test_checkpoint.py  test_cli.py  test_condensed_mode.py  test_conflicts.py  test_constraint_event_type.py  test_constraint_handlers.py  test_consult_gpt.py  test_context_handler.py  test_contradiction_surfacing.py  test_contradictions.py  test_core_handlers.py  test_council.py  test_coverage_gaps.py  test_db_utils.py  test_decay.py  test_decision_bridge.py  test_embedding_client.py  test_embedding_daemon.py  test_engram_improvements.py  test_exceptions.py  test_forgetting.py  test_grader.py  test_graphs_coverage.py  test_handler_actions.py  test_handler_coverage.py  test_handler_smoke.py  (+59 more)
translations/: README_de.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_pt-BR.md  README_ru.md  README_zh-CN.md
(+81 files in other folders)
