[project]
name = "omega-memory"
version = "1.4.14"
description = "Cross-model memory for AI agents. Local-first, works with Claude, GPT, Gemini, Cursor, Claw Code, and any MCP client"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Kokyō Keishō Zaidan Stichting", email = "hello@omega-memory.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "onnxruntime>=1.18.0",
    "tokenizers>=0.15.0",
    "sqlite-vec>=0.1.6,<0.2.0",
    "numpy>=1.24.0",
    "orjson>=3.9.0",
    "rich>=13.0.0",
    "markdownify>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/omega-memory/omega"
Repository = "https://github.com/omega-memory/omega"
Documentation = "https://omega-memory.github.io/omega/"
Changelog = "https://github.com/omega-memory/omega/blob/main/CHANGELOG.md"
Issues = "https://github.com/omega-memory/omega/issues"

[project.optional-dependencies]
server = ["mcp>=1.0.0", "starlette>=0.36.0", "uvicorn>=0.27.0"]
encrypt = ["cryptography>=41.0.0", "keyring>=25.0.0"]
full = [
    "omega-memory[server]",
    "omega-memory[encrypt]",
]
benchmark = ["openai>=1.0.0", "sentence-transformers>=2.2.0"]
docs = ["mkdocs-material>=9.0.0"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "commitizen>=4.1", "mypy>=1.8.0"]

[project.scripts]
omega = "omega.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omega"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "windows: marks tests that only run on Windows",
    "unix: marks tests that only run on Unix/macOS",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Pre-existing issues to clean up incrementally
ignore = [
    "E402",   # module-import-not-at-top (lazy imports by design)
    "E721",   # type-comparison (pre-existing)
    "E741",   # ambiguous-variable-name (pre-existing)
    "F841",   # unused-variable (pre-existing, 6 instances)
    "F821",   # undefined-name (pre-existing, dynamic imports)
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/omega/__init__.py:__version__",
]
changelog_start_rev = "v0.3.0"
update_changelog_on_bump = true
